NetBSD Problem Report #41629

From www@NetBSD.org  Tue Jun 23 14:50:53 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id AB32B63B913
	for <gnats-bugs@gnats.netbsd.org>; Tue, 23 Jun 2009 14:50:53 +0000 (UTC)
Message-Id: <20090623145053.6E90A63B883@www.NetBSD.org>
Date: Tue, 23 Jun 2009 14:50:53 +0000 (UTC)
From: k@kekyo.net
Reply-To: k@kekyo.net
To: gnats-bugs@NetBSD.org
Subject: Fixed identical ESS1878 on Fujitsu FMV-5100 NC/S by PnPBIOS
X-Send-Pr-Version: www-1.0

>Number:         41629
>Category:       port-i386
>Synopsis:       Fixed identical ESS1878 on Fujitsu FMV-5100 NC/S by PnPBIOS
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    port-i386-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Jun 23 14:55:00 +0000 2009
>Closed-Date:    Sun Oct 18 13:54:36 +0000 2009
>Last-Modified:  Sun Oct 18 13:54:36 +0000 2009
>Originator:     Kouji Matsui
>Release:        NetBSD-5.0
>Organization:
Individual
>Environment:
NetBSD NetBSD50 5.0 NetBSD 5.0 (GENERIC) #0: Sun Apr 26 18:50:08 UTC 2009  builds@b6.netbsd.org:/home/builds/ab/netbsd-5-0-RELEASE/i386/200904260229Z-obj/home/builds/ab/netbsd-5-0-RELEASE/src/sys/arch/i386/compile/GENERIC i386

>Description:
I have Fujitsu FMV-5100 NC/S (Very poor old notebook :)
The NetBSD-5.0 release installed this machine, testing.
Some problems were found, and fixed of a problem is sent.

# Other problems is are seen now.

>How-To-Repeat:
Kernel enable PnPBIOS scan, and enable ess* device.
But audio device not found.

>Fix:
--- ess_pnpbios.c.orig	2009-06-24 02:23:47.000000000 +0900
+++ ess_pnpbios.c	2009-06-24 00:10:39.000000000 +0900
@@ -75,6 +75,7 @@
 	    strcmp(aa->idstr, "CPQB0AC") && /* 1869 */
 	    strcmp(aa->idstr, "CPQB0AD") && /* 1869 */
 	    strcmp(aa->idstr, "CPQB0F1") && /* 1869 */
+	    strcmp(aa->idstr, "ESS1878") && /* 1878 */
 	    strcmp(aa->idstr, "ESS1879"))   /* 1879 */
 		return (0);


# It seems that the recognition of identity is integrated with isapnp and pnpbios...

>Release-Note:

>Audit-Trail:
From: Christos Zoulas <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41629 CVS commit: src/sys/arch/i386/pnpbios
Date: Tue, 23 Jun 2009 11:00:18 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Tue Jun 23 15:00:18 UTC 2009

 Modified Files:
 	src/sys/arch/i386/pnpbios: ess_pnpbios.c

 Log Message:
 PR/41629: Kouji Matsui: Fixed identical ESS1878 on Fujitsu FMV-5100 NC/S by PnPBIOS


 To generate a diff of this commit:
 cvs rdiff -u -r1.18 -r1.19 src/sys/arch/i386/pnpbios/ess_pnpbios.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Stephen Borrill <sborrill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41629 CVS commit: [netbsd-5] src/sys/arch/i386/pnpbios
Date: Sun, 18 Oct 2009 10:07:10 +0000

 Module Name:	src
 Committed By:	sborrill
 Date:		Sun Oct 18 10:07:10 UTC 2009

 Modified Files:
 	src/sys/arch/i386/pnpbios [netbsd-5]: ess_pnpbios.c

 Log Message:
 Pull up the following revisions(s) (requested by snj in ticket #1098):
 	sys/arch/i386/pnpbios/ess_pnpbios.c:	revision 1.19

 Fix identification of ESS1878 on Fujitsu FMV-5100 NC/S by PnPBIOS. Fixes
 PR/41629.


 To generate a diff of this commit:
 cvs rdiff -u -r1.17 -r1.17.10.1 src/sys/arch/i386/pnpbios/ess_pnpbios.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: snj@NetBSD.org
State-Changed-When: Sun, 18 Oct 2009 13:54:36 +0000
State-Changed-Why:
Fixed and pulled up to netbsd-5.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.