Pull up the following revisions(s) (requested by snj in ticket #1098): 	sys/arch/i386/pnpbios/ess_pnpbios.c:	revision 1.19

Fix identification of ESS1878 on Fujitsu FMV-5100 NC/S by PnPBIOS. Fixes
PR/41629.